fix spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -339,11 +339,11 @@ ul {
 
 .footer {
   box-sizing: border-box;
-  background: #000;
+  background-color: #000;
+  padding: 60px 80px;
 }
 
 .footer__columns {
-  padding: 60px 80px;
   display: flex;
   justify-content: flex-end;
 }
@@ -363,23 +363,23 @@ ul {
 
 .footer__column-heading {
   color: white;
-  margin: 0;
+  margin-bottom: 20px;
 }
 
 .footer__list {
   list-style-type: none;
-  padding: 0;
-  margin: 0;
 }
 
 .footer__list-item {
   color: white;
-  padding-top: 16px;
 }
 
 .footer__column-link {
   color: white;
   text-decoration: none;
+  display: flex;
+  column-gap: 10px;
+  align-items: center;
 }
 
 .footer__social-icon {
@@ -390,6 +390,5 @@ ul {
 
 .footer__copyright {
   color: white;
-  padding: 100px 0 60px 80px;
-  margin: 0;
+  margin-top: 100px;
 }
